--- a/pages/my/person/info.wxml
+++ b/pages/my/person/info.wxml
@@ -1,2 +1,30 @@
 <!--pages/my/person/info.wxml-->
-<text>个人信息</text>
+<view class="container" style="background-color:white;">
+  <view class="sel_avatar_ctn">
+    <image class="sel_avatar_img" src="{{_userInfo.avatarUrl}}" mode="aspectFill"></image>
+    <text class="sel_user_name">{{_userInfo.nickName}}</text>
+  </view>
+  <view class="sel_info_ctn">
+    <text class="sel_info_ctn_txt">ID：{{_userInfo.id}}</text>
+    <text class="sel_info_ctn_txt">性别：{{_userInfo.gender==1?"男":"女"}}</text>
+    <text class="sel_info_ctn_txt">城市：{{_userInfo.city}}</text>
+    <text class="sel_info_ctn_txt">我加入的商圈：</text>
+  </view>
+  <view class="sel_info_ssq_ctn">
+    <block wx:for="{{ssqData}}" wx:for-index="index">
+      <view class="sel_info_ssq">
+        <image class="ssq_pos_img" mode="aspectFit" src="../../../static/custom/icons/icon_pos_b.png"></image>
+        <view class="ssq_pos_ctn">
+          <text class="ssq_pos_name">{{item.name}}  商圈</text>
+          <text class="ssq_pos_area">{{item.area}}</text>
+        </view>
+        <text class="ssq_pos_btn">退出</text>
+      </view>
+    </block>
+  </view>
+  <view class="sel_info_about_ssq" bindtap="goAbout">
+    关于社区商业圈   >>
+  </view>
+
+
+</view>
