--- a/components/ssq/logo/index.wxss
+++ b/components/ssq/logo/index.wxss
@@ -1,18 +1,18 @@
 .logo-container {
   display: flex;
-  margin: 5px;
+  margin: 10rpx;
   border-width: 0px;
   border-color: transparent;
   border-style: solid;
-  border-radius: 3px;
+  border-radius: 6rpx;
   box-sizing: border-box;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 1rpx 1rpx 6rpx rgba(0, 0, 0, 0.2);
   position: relative;
 }
 
 .logo-img {
   width: 100%;
-  height: 75px;
+  height: 150rpx;
 }
 
 .top-right {
