调整新建商圈目录

--- a/pages/district/create/create.wxml
+++ b/pages/district/create/create.wxml
@@ -1,5 +1,4 @@
-<!--pages/newssq/newssq.wxml-->
-<!-- <text>pages/newssq/newssq.wxml</text> -->
+<!--pages/district/create/create.wxml-->
 <view class="ctn">
   <text class="web_title">申请创建新的商业圈</text>
   <view class="line"></view>
