--- a/pages/shop/index.wxml
+++ b/pages/shop/index.wxml
@@ -37,8 +37,10 @@
 
     <view>
       <view class="vertical-margin-top">产品/服务列表(18个项目)</view>
-      <view class="van-hairline--surround">
-
+      <view class="product-grid van-hairline--surround">
+        <block wx:for="{{productList}}" wx:key="*this" wx:for-item="productItem">
+          <product-item class="product-item" thumb-class="product-thumbnail" name="{{productItem.name}}" tags="{{productItem.tags}}" price="{{productItem.price}}" num="{{productItem.num}}" thumbnail="{{productItem.thumbnail}}" vaildTime="{{productItem.vaildTime}}"/>
+        </block>
       </view>
     </view>
 
