商圈主详情页

--- a/pages/district/detail/detail.wxml
+++ b/pages/district/detail/detail.wxml
@@ -1,7 +1,7 @@
 <!--pages/district/detail/detail.wxml-->
 <view class="container">
   <view class="name_info">
-    <image class="n_icon" mode="aspectFit" src="../../static/custom/icons/icon_pos_b.png"></image>
+    <image class="n_icon" mode="aspectFit" src="../../../static/custom/icons/icon_pos_b.png"></image>
     <text class="n_name">{{ssqInfo.name}} 商圈</text>
     <text class="n_area">{{ssqInfo.area}}</text>
     <text class="n_dis">距离：{{distance}}km</text>
@@ -18,31 +18,39 @@
     <van-tabs active="{{ active }}" bind:change="onChange" line-width="0">
       <van-tab title="本圈商家">
         <van-tabs active="{{ active_chi }}" bind:change="onChangeChi" type="line">
-          <van-tab title="全部">
-          全部
-          </van-tab>
-          <van-tab title="培训辅导">
-          培训辅导
-          </van-tab>
-          <van-tab title="健康">
-          健康
-          </van-tab>
-          <van-tab title="家装报修">
-          家装报修
-          </van-tab>
-          <van-tab title="中介">
-          中介
-          </van-tab>
-          <van-tab title="服务">
-          服务
-          </van-tab>
-          <van-tab title="其它">
-          其它
-          </van-tab>
+          <block wx:for="{{ssqBpInfo.bInfo}}" wx:for-index="index" >
+            <van-tab optype="0" title="{{item.opname}}">
+              <view class="tab_ctn">
+                <block wx:for="{{ssqBpInfo.bInfo[index].members}}" wx:for-index="index">
+                  <view class="shop_ctn" sid="{{item.id}}">
+                    <image mode="aspectFit" class="shop_photo" src="{{item.photo}}"></image>
+                    <view class="shop_right_ctn">
+                      <text class="shop_name">{{item.name}}</text>
+                      <view class="shop_flag_ctn">
+                        <image class="shop_flag" src="../../../static/icons/add_cart_r.png"></image>
+                      </view>
+                    </view>
+                  </view>
+                </block>
+              </view>
+            </van-tab>
+          </block>
         </van-tabs>
       </van-tab>
       <van-tab title="本圈个人">
-      内容 2
+        <view class="tab_ctn">
+          <block wx:for="{{ssqBpInfo.pInfo}}" wx:for-index="index">
+          <view class="shop_ctn" sid="{{item.id}}">
+            <image mode="aspectFit" class="shop_photo" src="{{item.photo}}"></image>
+            <view class="shop_right_ctn">
+              <text class="shop_name">{{item.name}}</text>
+              <view class="shop_flag_ctn">
+                <image class="shop_flag" src="../../../static/icons/add_cart_r.png"></image>
+              </view>
+            </view>
+          </view>
+          </block>     
+        </view>
       </van-tab>
     </van-tabs>
   </view>
