--- a/pages/district/detail/detail.wxss
+++ b/pages/district/detail/detail.wxss
@@ -8,7 +8,7 @@
   width: 100%;height: 70rpx;display: flex;flex-direction: row;align-items: center;
 }
 .name_info .n_icon{
-  height: 100%;width: 60rpx;padding-left: 10rpx;
+  height: 100%;width: 30rpx;padding-left: 10rpx;
 }
 .name_info .n_name{
   font-size: 38rpx;padding-left: 10rpx;
@@ -19,6 +19,9 @@
 .name_info .n_dis{
   font-size: 22rpx;padding-top: 18rpx;padding-left: 20rpx;
 }
+.name_info .n_pos{
+  width: 35rpx;height: 35rpx;padding-left: 10rpx;padding-top: 17rpx;
+  }
 
 .photo_info{
   width: 100%;height: 240rpx;display: flex;flex-direction: row;align-items: center;
@@ -31,7 +34,12 @@
   width: 260rpx; font-size: 22rpx;display: flex;flex-direction: column;
 }
 .photo_info .p_changebtn{
-  color: blue;text-decoration-line: underline;
+  color: gray;text-decoration-line: underline;margin-top: 15rpx;
+}
+.photo_info .p_joinbtn{
+  width: 60%;height: 50rpx;font-size:30rpx;padding-top: 5rpx;
+  border: 1rpx solid gainsboro;border-radius: 5rpx;
+  text-align: center;margin-top: 15rpx;margin-right: 39%;background-color: white;
 }
 
 .contents_info{
@@ -41,7 +49,7 @@
   width: 100%;height: 100%;display:flex;flex-direction: row;flex-wrap: wrap;
   }
 .shop_ctn{
-  width: 30%;height: 100rpx;display: flex;flex-direction: row;align-items: center;
+  width: 100%;height: 100rpx;display: flex;flex-direction: row;align-items: center;
   border: 1rpx solid gainsboro;
   border-radius: 10rpx;margin: 10rpx;
 }
@@ -52,8 +60,8 @@
   height: 90%;width: 69%;display: flex;flex-direction: column;
 }
 .shop_name{
-  width: 100%;height: 40rpx;
-  font-size: 22rpx;overflow: hidden;
+  width: 100%;height: 40rpx;padding-top: 10rpx;
+  font-size: 26rpx;overflow: hidden;
 }
 .shop_flag{
   width: 35rpx;height: 25rpx;
