--- a/pages/district/detail/detail.wxss
+++ b/pages/district/detail/detail.wxss
@@ -46,7 +46,7 @@
   width: 100%;
 }
 .tab_ctn{
-  width: 100%;height: 100%;display:flex;flex-direction: row;flex-wrap: wrap;
+  width: 100%;height: 800rpx;display:flex;flex-direction: row;flex-wrap: wrap;flex:1;
   }
 .shop_ctn{
   width: 100%;height: 100rpx;display: flex;flex-direction: row;align-items: center;
@@ -64,5 +64,5 @@
   font-size: 26rpx;overflow: hidden;
 }
 .shop_flag{
-  width: 35rpx;height: 25rpx;
+  width: 50rpx;height: 25rpx;margin: 5rpx;
 }
