--- a/pages/district/detail/detail.wxss
+++ b/pages/district/detail/detail.wxss
@@ -46,10 +46,10 @@
   width: 100%;
 }
 .tab_ctn{
-  width: 100%;height: 800rpx;display:flex;flex-direction: row;flex-wrap: wrap;flex:1;
+  width: 100%;height: auto;display:flex;flex-direction: column;
   }
 .shop_ctn{
-  width: 100%;height: 100rpx;display: flex;flex-direction: row;align-items: center;
+  width: calc(100%-20rpx);height: 100rpx;display: flex;flex-direction: row;align-items: center;
   border: 1rpx solid gainsboro;
   border-radius: 10rpx;margin: 10rpx;
 }
