--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,8 +4,8 @@
   <!-- 顶部用户信息栏 -->
   <view class="flex-row space-items default-padding">
     <view class="flex-row center" bindtap="goMyPerson">
-      <avatar class="small-avatar" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1563861469412&di=ed292ede6531b4779ba4f371afb196d0&imgtype=0&src=http%3A%2F%2Fu.thsi.cn%2Ffileupload%2Fdata%2FCircle%2F1664781537411677.jpg" mode="aspectFill"></avatar>
-      <text class="default-margin">Locky.Lee</text>
+      <avatar class="small-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill"></avatar>
+      <text class="default-margin">{{userInfo.nickName}}</text>
     </view>
     <view class="flex-row center">
       <text>{{time}}</text>
@@ -34,7 +34,7 @@
       <text>深圳市龙岗区xxxxxxxxx</text>
     </view>
     <view>
-      <van-button>马上加入</van-button>
+      <van-button bindtap="goJoin">马上加入</van-button>
     </view>
   </view>
 
@@ -96,4 +96,9 @@
 
   </view>
 
+  <!-- 需要使用 button 来授权登录 -->
+  <view class="getuserinfo">
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+  </view>
+  
 </view>
