--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -100,5 +100,5 @@
   <view class="getuserinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
   </view>
-  
+  <banner></banner>
 </view>
