--- a/pages/district/join/person/person.wxss
+++ b/pages/district/join/person/person.wxss
@@ -1,1 +1,70 @@
 /* pages/district/join/person/person.wxss */
+.container {
+  width: 100%;height: 100%;
+  display: flex;flex-direction: column;align-items: center;
+}
+
+.name_info{
+  width: 100%;height: 70rpx;display: flex;flex-direction: row;align-items: center;
+}
+.name_info .n_icon{
+  height: 100%;width: 30rpx;padding-left: 10rpx;
+}
+.name_info .n_name{
+  font-size: 38rpx;padding-left: 10rpx;
+}
+.name_info .n_area{
+  font-size: 22rpx;padding-top: 18rpx;padding-left: 10rpx;
+}
+.name_info .n_dis{
+  font-size: 22rpx;padding-top: 18rpx;padding-left: 20rpx;
+}
+.name_info .n_pos{
+  width: 35rpx;height: 35rpx;padding-left: 10rpx;padding-top: 17rpx;
+  }
+
+.photo_info{
+  width: 100%;height: 240rpx;display: flex;flex-direction: row;align-items: center;
+  background-color: rgb(233, 233, 231);
+}
+.photo_info .p_img{
+  width: calc(100% - 260rpx);height: calc(100% - 20rpx); margin: 10rpx;
+}
+.photo_info .p_text{
+  width: 260rpx; font-size: 22rpx;display: flex;flex-direction: column;
+}
+.photo_info .p_changebtn{
+  color: gray;text-decoration-line: underline;margin-top: 15rpx;
+}
+.photo_info .p_joinbtn{
+  width: 60%;height: 50rpx;font-size:30rpx;padding-top: 5rpx;
+  border: 1rpx solid gainsboro;border-radius: 5rpx;
+  text-align: center;margin-top: 15rpx;margin-right: 39%;background-color: white;
+}
+
+.contents_info{
+  width:100%;height: auto;
+  display: flex;flex-direction: column;
+}
+.contents_info .ctn_way{
+  font-size: 32rpx;margin-top: 20rpx;padding-left: 20rpx;
+}
+.contents_info .ctn_info{
+  width: 100%;height: auto;display: flex;flex-direction: column;
+  padding-left: 40rpx;
+}
+.info_opmsg{
+  font-size: 28rpx;height:auto;width:100%;
+}
+.info_imginfo{
+  font-size: 28rpx;height: auto;width:100%;padding-left: 30rpx;
+}
+.info_imginfo .uploadtxt{
+  text-decoration-line: underline;color: blue;
+}
+.myimg{
+  width: 100%;height: 200rpx;
+}
+.comitbtn{
+  margin-top: 10rpx;width: 90%;background-color: green;margin-left: 5%;color: white;
+}
