--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,8 +4,8 @@
   <!-- 顶部用户信息栏 -->
   <view class="flex-row space-items default-padding">
     <view class="flex-row center" bindtap="goMyPerson">
-      <avatar class="small-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill"></avatar>
-      <text class="default-margin">{{userInfo.nickName}}</text>
+      <avatar class="small-avatar" src="{{v_avatarUrl}}" mode="aspectFill"></avatar>
+      <text class="default-margin">{{v_nickName}}</text>
     </view>
     <view class="flex-row center">
       <text>{{time}}</text>
@@ -97,8 +97,8 @@
   </view>
 
   <!-- 需要使用 button 来授权登录 -->
-  <view class="getuserinfo">
+  <!-- <view class="getuserinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-  </view>
+  </view> -->
   <banner></banner>
 </view>
