--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,12 @@
 @import "/components/vant/common/index.wxss";
+.s_btn{width: 140rpx;}
+.kmicon{
+  height: 40rpx;width: 100%;
+}
+.kmtext{height: 30%;width: 100%;font-size: 20rpx;text-align: center;}
+.ssq_name{
+  font-size: 38rpx;
+}
+.ssq_area{
+  font-size: 24rpx;color: rgb(146, 145, 145);margin-top: 14rpx;margin-left: 5rpx;
+}
