--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -44,14 +44,29 @@
 
   <!-- Post广告区域 -->
   <view>
-    <van-notice-bar left-icon="volume-o" color="orange" text="专业肩颈理疗 50分钟舒服享受 仅需38元 马上预约" />
-    <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-      <block wx:for="{{postUrls}}">
-        <swiper-item>
-          <image src="{{item}}" mode="aspectFill"/>
-        </swiper-item>
-      </block>
-    </swiper>
+    <view class="swiper_txtctn">
+      <swiper class="swiper_self" autoplay='true' vertical="true" interval='4000' duration='500' circular='true'>
+        <block wx:for="{{postTexts}}" wx:for-index="index">
+          <swiper-item class="swiper_item">
+            <van-notice-bar left-icon="volume-o" color="orange" text="{{item.text}}" />
+            <!-- <view class='swiper_text' mode='aspectFill'>"{{item.text}}"</view> -->
+          </swiper-item>
+        </block>
+      </swiper>
+    </view>
+  </view>
+  <view>
+    <view class="swiper_imgctn">
+      <swiper class="swiper_self" autoplay='true' interval='5000' duration='1000' circular='true'>
+        <block wx:for="{{postImgs}}" wx:for-index="index">
+          <swiper-item class="swiper_img_item">
+            <image src='{{item.url}}' class='swiper_img' mode='aspectFill'></image>
+            <view class="swiper_img_txtbg" hidden="{{item.text==''?true:false}}"></view>
+            <text class="swiper_img_txt" hidden="{{item.text==''?true:false}}">{{item.text}}</text>
+          </swiper-item>
+        </block>
+      </swiper>
+    </view>
   </view>
 
   <!-- 所在商圈的列表 -->
