--- a/pages/my/person/info.wxml
+++ b/pages/my/person/info.wxml
@@ -8,14 +8,14 @@
     <text class="sel_info_ctn_txt">ID：{{_userInfo.ID}}</text>
     <text class="sel_info_ctn_txt">性别：{{_userInfo.gender==1?"男":"女"}}</text>
     <text class="sel_info_ctn_txt">城市：{{_userInfo.city}}</text>
-    <text class="sel_info_ctn_txt">我加入的商圈：</text>
+    <text class="sel_info_ctn_txt">我加入的社圈：</text>
   </view>
   <view class="sel_info_ssq_ctn">
     <block wx:for="{{ssqData}}" wx:for-index="index">
       <view class="sel_info_ssq">
         <image class="ssq_pos_img" mode="aspectFit" src="../../../static/custom/icons/icon_pos_b.png"></image>
         <view class="ssq_pos_ctn">
-          <text class="ssq_pos_name">{{item.name}}  商圈</text>
+          <text class="ssq_pos_name">{{item.name}}  社圈</text>
           <text class="ssq_pos_area">{{item.area}}</text>
         </view>
         <text class="ssq_pos_btn">退出</text>
