首页本圈商家及本圈个人渲染

--- a/components/ssq/logo/index.wxml
+++ b/components/ssq/logo/index.wxml
@@ -1,4 +1,6 @@
 <view class="logo-container">
-  <image class="logo-img" mode="aspectFill" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1563866519577&di=7b6bf24aa5b3e7ec54927b3aa829a33a&imgtype=0&src=http%3A%2F%2Fimg.redocn.com%2Fsheji%2F20150127%2Fshejianshangdelvxingmeishihaibaosheji_3895321.jpg"></image>
+  <image class="logo-img" mode="aspectFill" src="{{cimg}}"></image>
   <van-tag class="top-right" type="danger">标签</van-tag>
+  <view class="bottom txtbg"></view>
+  <text class="bottom txt">{{cname}}</text>
 </view>
