--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -75,6 +75,8 @@
         </block>
       </scroll-view>
     </view>
+    <button class="plus">+</button>
+    <text class="plus_txt">点击‘+’号新增产品，最多可以创建18个产品</text>
   </view>
 
 </view>
