--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -26,3 +26,5 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 .pro_title{font-size: 28rpx;}
 .pro_des{font-size: 20rpx;margin-left: 30rpx;}
 .pro_list{width: 100%;height: auto;}
+.plus{font-size: 32rpx;}
+.plus_txt{font-size: 24rpx;color: rgb(116, 116, 116);}
